# owcli

./: .editorconfig  .gitignore  .style.yapf  .travis.yml  Makefile  Pipfile  README.md  pyproject.toml  setup.py  test.sh
.github/workflows/: e2e.yml  pythonapp.yml  release.yaml  tests.yaml  tests.yml
owcli/: __init__.py  main.py
owcli/commands/init/: main.py
owcli/template/: Pipfile  README.md  main.py  setup.py
owcli/template/commands/cmd2/subcmd1/: main.py
owcli/template/yourapp/: main.py
owcli/template/yourapp/commands/cmd1/: main.py
owcli/template/yourapp/commands/cmd2/subcmd2/: main.py
owcli/template/yourapp/commands/cmd2/subcmd3/: main.py
owcli/template/yourapp/commands/cmd3/: main.py
template/commands/cmd1/: main.py
template/commands/cmd2/subcmd2/: main.py
tests/: test.bats
tests/expected/: help  none  root_help
tests/expected/cmd1/: full  none
tests/expected/cmd2/: help  none
tests/expected/cmd2/subcmd1/: full  help  none
tests/expected/cmd2/subcmd2/: full  help  none
tests/expected/cmd2/subcmd3/: help  none
tests/expected/cmd3/: error  help
yuyaapp/: Pipfile  README.md  setup.py
yuyaapp/yuyaapp/: main.py
