[tool.poetry]
name = "owcli"
version = "0.8.0"
description = "CLI framework which supports both command and subcommand."
authors = ["tadashi-aikawa <syou.maman@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tadashi-aikawa/owcli"
repository = "https://github.com/tadashi-aikawa/owcli/blob/master/README.md"
documentation = "https://tadashi-aikawa.github.io/owcli/"
keywords = ["cli framework"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[tool.poetry.dependencies]
python = "^3.7"
owlmixin = "^6.0"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]

[tool.poetry.plugins."console_scripts"]
"owcli" = "owcli.main:main"


[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

