[project]
authors = [
    {name = "tadashi-aikawa", email = "syou.maman@gmail.com"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.9"
dependencies = [
    "owlmixin<8.0,>=7.0.1",
    "docopt<1.0.0,>=0.6.2",
]
name = "owcli"
version = "0.9.0"
description = "CLI framework which supports both command and subcommand."
readme = "README.md"
keywords = [
    "cli framework",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
homepage = "https://github.com/tadashi-aikawa/owcli"
repository = "https://github.com/tadashi-aikawa/owcli/blob/master/README.md"
documentation = "https://tadashi-aikawa.github.io/owcli/"

[project.scripts]
owcli = "owcli.main:main"

[dependency-groups]
dev = [
    "ruff>=0.8.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
